cmake_minimum_required(VERSION 3.24)
project(Tetris)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tetris
        .idea/.gitignore
        .idea/modules.xml
        .idea/Tetris.iml
        .idea/workspace.xml
        main.cpp
        Tetris.sln
        Tetris.vcxproj
        Tetris.vcxproj.filters
        Tetris.vcxproj.user)
